# snapshot-testing

./: Cargo.toml
src/: lib.rs
src/snapshot_inputs/: simple.json
src/snapshots/: snapshot_testing__api.snap  snapshot_testing__api@simple.json.snap
