[package]
name = "snapshot-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
insta = { version =  "0.16", features = ["redactions",  "glob"] }
